--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "@easyops-cn/docusaurus-search-local": "0.49.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.7.0",
